--- a/AUPSUP_HTML5_CUSTOMIZING/webapp/manifest.json
+++ b/AUPSUP_HTML5_CUSTOMIZING/webapp/manifest.json
@@ -12,9 +12,22 @@
 		"sourceTemplate": {
 			"id": "html5moduletemplates.basicSAPUI5ApplicationProjectModule",
 			"version": "1.40.12"
+		},
+		"crossNavigation": {
+			"inbounds": {
+				"intent1": {
+					"signature": {
+						"parameters": {},
+						"additionalParameters": "allowed"
+					},
+					"semanticObject": "Customizing",
+					"action": "Display",
+					"title": "{{appTitle}}",
+					"icon": "sap-icon://SAP-icons-TNT/application-service"
+				}
+			}
 		}
 	},
-
 	"sap.ui": {
 		"technology": "UI5",
 		"icons": {
@@ -31,7 +44,6 @@
 			"phone": true
 		}
 	},
-
 	"sap.ui5": {
 		"flexEnabled": false,
 		"rootView": {
