--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ cp.project.properties.json
 /node_modules/*
 /AUP_SUPPLIER_PORTAL_ui_deployer/resources/*
 /AUPSUP_HTML5_METASUPPLIER/dist/*
+*.mtar
