--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/manifest.json
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/manifest.json
@@ -25,7 +25,7 @@
 					"title": "{{appTitle}}",
 					"indicatorDataSource": {
 						"dataSource": "ORDERS_COUNTER",
-						"path": "/GetCounter?I_TYPE=OrdersToApprove",
+						"path": "https://${org}-${space}-aup-supplier-portal-approuter.${default-domain}/backend/Utils/UtilsManagement/GetCounter?I_TYPE=OrdersToApprove",
 						"refresh": 1000
 					}
 				}
