--- a/AUPSUP_HTML5_APR_SCDAGR/xs-app.json
+++ b/AUPSUP_HTML5_APR_SCDAGR/xs-app.json
@@ -1,15 +1,19 @@
 {
-  "welcomeFile": "/index.html",
-  "authenticationMethod": "route",
-  "logout": {
-    "logoutEndpoint": "/do/logout"
-  },
-  "routes": [
-    {
-      "source": "^(.*)$",
-      "target": "$1",
-      "service": "html5-apps-repo-rt",
-      "authenticationType": "xsuaa"
-    }
-  ]
+	"welcomeFile": "/index.html",
+	"authenticationMethod": "route",
+	"logout": {
+		"logoutEndpoint": "/do/logout"
+	},
+	"routes": [{
+		"source": "^(.*)$",
+		"target": "$1",
+		"service": "html5-apps-repo-rt",
+		"authenticationType": "xsuaa"
+	}, {
+		"source": "^/backend/(.*)$",
+		"target": "$1",
+		"destination": "Orders_Counter",
+		"httpMethods": ["GET", "POST"],
+		"authenticationType": "xsuaa"
+	}]
 }
