NODE debuggin activated

--- a/AUPSUP_NODE/package.json
+++ b/AUPSUP_NODE/package.json
@@ -26,7 +26,7 @@
 	"scripts": {
 		"test": "node node_modules/jest/bin/jest --config jest.json",
 		"test-coverage": "node node_modules/jest/bin/jest --coverage --config jest.json",
-		"start": "node server.js"
+		"start": "node --inspect server.js"
 	},
 	"engines": {
 		"node": "12.x"
