METASUPPLIER: gestione sdoppiamento contatti

--- a/AUPSUP_NODE/package.json
+++ b/AUPSUP_NODE/package.json
@@ -3,6 +3,7 @@
 		"@sap/xsenv": "latest",
 		"@sap/xssec": "latest",
 		"@sap/hdbext": "latest",
+		"@sap/node-jwt":"latest",
 		"express": "~4.16.0",
 		"passport": "^0.4.0",
 		"stringify-object": "latest",
