UPDATE SVILUPPO: Punta A LUVE

--- a/mta.yaml
+++ b/mta.yaml
@@ -73,18 +73,6 @@ modules:
           artifacts:
             - './*'
           target-path: resources/AUPSUP_HTML5_CUSTOMIZING
-        - name: TEST
-          artifacts:
-            - './*'
-          target-path: resources/TEST
-        - name: TEST_MODIF
-          artifacts:
-            - './*'
-          target-path: resources/TEST_MODIF
-        - name: TEST_LONG
-          artifacts:
-            - './*'
-          target-path: resources/TEST_LONG
   - name: AUPSUP_LAUNCHPAD
     type: com.sap.portal.content
     path: AUPSUP_LAUNCHPAD
@@ -207,27 +195,6 @@ modules:
       builder: grunt
       supported-platforms: []
       build-result: dist
-  - name: TEST
-    type: html5
-    path: TEST
-    build-parameters:
-      builder: grunt
-      supported-platforms: []
-      build-result: dist
-  - name: TEST_MODIF
-    type: html5
-    path: TEST_MODIF
-    build-parameters:
-      builder: grunt
-      supported-platforms: []
-      build-result: dist
-  - name: TEST_LONG
-    type: html5
-    path: TEST_LONG
-    build-parameters:
-      builder: grunt
-      supported-platforms: []
-      build-result: dist
 resources:
   - name: AUP_SUPPLIER_PORTAL_html5_repo_runtime
     parameters:
@@ -265,7 +232,7 @@ resources:
           onSubscription: 'https://${org}-${space}-aup-supplier-portal-approuter.${default-domain}/callback/v1.0/tenants/{tenantId}'
           getDependencies: 'https://${org}-${space}-aup-supplier-portal-approuter.${default-domain}/callback/v1.0/dependencies'
         category: ePaas
-        description: Supplier Portal
+        description: DEVELOP ENV.
         displayName: Altea Supplier Portal
     type: org.cloudfoundry.managed-service
   - name: hdi_AUPSUP_DATABASE
