--- a/AUPSUP_HTML5_APR_SCDAGR/webapp/manifest.json
+++ b/AUPSUP_HTML5_APR_SCDAGR/webapp/manifest.json
@@ -22,8 +22,23 @@
 					},
 					"semanticObject": "ApproveSchedAgree",
 					"action": "Display",
-					"title": "{{appTitle}}"
+					"title": "{{appTitle}}",
+					"indicatorDataSource": {
+						"dataSource": "mainService",
+						"path": "count",
+						"refresh": 1000
+					}
 				}
+			}
+		},
+		"dataSources": {
+			"mainService": {
+				"uri": "items",
+				"type": "JSON"
+			},
+			"scopedService": {
+				"uri": "items/scopes",
+				"type": "JSON"
 			}
 		}
 	},
