--- a/mta.yaml
+++ b/mta.yaml
@@ -222,19 +222,19 @@ resources:
       service: saas-registry
       service-plan: application
       config:
-        appId: 'AUP_SUPPLIER_PORTAL!t43907'
+        appId: 'AUP_SUPPLIER_PORTAL!t34981'
         appUrls:
           onSubscription: 'https://${org}-${space}-aup-supplier-portal-approuter.${default-domain}/callback/v1.0/tenants/{tenantId}'
           getDependencies: 'https://${org}-${space}-aup-supplier-portal-approuter.${default-domain}/callback/v1.0/dependencies'
         category: ePaas
-        description: PRODUCTION ENV.
+        description: DEVELOP ENV.
         displayName: Altea Supplier Portal
     type: org.cloudfoundry.managed-service
   - name: hdi_AUPSUP_DATABASE
     parameters:
-      service-name: prdluveecc
+      service-name: devalteaups4
       config:
-        schema: prdluveecc
+        schema: devalteaups4
     properties:
       hdi-master-container: '${service-name}'
     type: com.sap.xs.hdi-container
