--- a/mta.yaml
+++ b/mta.yaml
@@ -238,14 +238,14 @@ resources:
           onSubscription: 'https://${org}-${space}-aup-supplier-portal-approuter.${default-domain}/callback/v1.0/tenants/{tenantId}'
           getDependencies: 'https://${org}-${space}-aup-supplier-portal-approuter.${default-domain}/callback/v1.0/dependencies'
         category: ePaas
-        description: DEVELOP ENV.
+        description: PRODUCTION ENV.
         displayName: Altea Supplier Portal
     type: org.cloudfoundry.managed-service
   - name: hdi_AUPSUP_DATABASE
     parameters:
-      service-name: devalteaups4
+      service-name: prdluveecc
       config:
-        schema: devalteaups4
+        schema: prdluveecc
     properties:
       hdi-master-container: '${service-name}'
     type: com.sap.xs.hdi-container
