--- a/mta.yaml
+++ b/mta.yaml
@@ -99,6 +99,7 @@ modules:
       builder: grunt
       supported-platforms: []
       build-result: dist
+      ignore: ["default-env.json", "node_modules/"] 
   - name: AUPSUP_HTML5_PLANNING
     type: html5
     path: AUPSUP_HTML5_PLANNING
@@ -106,6 +107,7 @@ modules:
       builder: grunt
       supported-platforms: []
       build-result: dist
+      ignore: ["default-env.json", "node_modules/"] 
   - name: AUPSUP_NODE
     type: nodejs
     path: AUPSUP_NODE
@@ -117,6 +119,8 @@ modules:
       app-name: AUPSUP_NODE
       disk-quota: 500M
       memory: 256M
+    build-parameters:
+      ignore: ["default-env.json", "node_modules/"]       
     requires:
       - name: uaa_AUP_SUPPLIER_PORTAL
       - name: SaasRegistry
@@ -143,6 +147,7 @@ modules:
       builder: grunt
       supported-platforms: []
       build-result: dist
+      ignore: ["default-env.json", "node_modules/"] 
   - name: AUPSUP_HTML5_NONCONFORMITA
     type: html5
     path: AUPSUP_HTML5_NONCONFORMITA
@@ -150,6 +155,7 @@ modules:
       builder: grunt
       supported-platforms: []
       build-result: dist
+      ignore: ["default-env.json", "node_modules/"] 
   - name: AUPSUP_HTML5_INBOUNDDELIV
     type: html5
     path: AUPSUP_HTML5_INBOUNDDELIV
@@ -157,6 +163,7 @@ modules:
       builder: grunt
       supported-platforms: []
       build-result: dist
+      ignore: ["default-env.json", "node_modules/"] 
   - name: AUPSUP_HTML5_SCHEDAGREE
     type: html5
     path: AUPSUP_HTML5_SCHEDAGREE
@@ -164,6 +171,7 @@ modules:
       builder: grunt
       supported-platforms: []
       build-result: dist
+      ignore: ["default-env.json", "node_modules/"] 
   - name: AUPSUP_HTML5_APR_SCDAGR
     type: html5
     path: AUPSUP_HTML5_APR_SCDAGR
@@ -171,6 +179,7 @@ modules:
       builder: grunt
       supported-platforms: []
       build-result: dist
+      ignore: ["default-env.json", "node_modules/"] 
   - name: AUPSUP_HTML5_METASUPPLIER_M
     type: html5
     path: AUPSUP_HTML5_METASUPPLIER_M
@@ -178,6 +187,7 @@ modules:
       builder: grunt
       supported-platforms: []
       build-result: dist
+      ignore: ["default-env.json", "node_modules/"] 
   - name: AUPSUP_HTML5_METASUPPLIER_BM
     type: html5
     path: AUPSUP_HTML5_METASUPPLIER_BM
@@ -185,6 +195,7 @@ modules:
       builder: grunt
       supported-platforms: []
       build-result: dist
+      ignore: ["default-env.json", "node_modules/"] 
   - name: AUPSUP_HTML5_PURCH_ORDS
     type: html5
     path: AUPSUP_HTML5_PURCH_ORDS
@@ -192,6 +203,7 @@ modules:
       builder: grunt
       supported-platforms: []
       build-result: dist
+      ignore: ["default-env.json", "node_modules/"] 
   - name: AUPSUP_HTML5_CUSTOMIZING
     type: html5
     path: AUPSUP_HTML5_CUSTOMIZING
@@ -199,6 +211,7 @@ modules:
       builder: grunt
       supported-platforms: []
       build-result: dist
+      ignore: ["default-env.json", "node_modules/"] 
   - name: AUPSUP_HTML5_LOGSORDSCHED
     type: html5
     path: AUPSUP_HTML5_LOGSORDSCHED
@@ -206,6 +219,7 @@ modules:
       builder: grunt
       supported-platforms: []
       build-result: dist
+      ignore: ["default-env.json", "node_modules/"] 
 resources:
   - name: AUP_SUPPLIER_PORTAL_html5_repo_runtime
     parameters:
