APP doc management

--- a/mta.yaml
+++ b/mta.yaml
@@ -78,6 +78,10 @@ modules:
           artifacts:
             - './*'
           target-path: resources/AUPSUP_HTML5_LOGSORDSCHED
+        - name: AUPSUP_HTML5_DOC_MANAG
+          artifacts:
+            - './*'
+          target-path: resources/AUPSUP_HTML5_DOC_MANAG
   - name: AUPSUP_LAUNCHPAD
     type: com.sap.portal.content
     path: AUPSUP_LAUNCHPAD
@@ -100,7 +104,9 @@ modules:
       builder: grunt
       supported-platforms: []
       build-result: dist
-      ignore: ["default-env.json", "node_modules/"]   
+      ignore:
+        - default-env.json
+        - node_modules/
   - name: AUPSUP_HTML5_PLANNING
     type: html5
     path: AUPSUP_HTML5_PLANNING
@@ -108,7 +114,9 @@ modules:
       builder: grunt
       supported-platforms: []
       build-result: dist
-      ignore: ["default-env.json", "node_modules/"]   
+      ignore:
+        - default-env.json
+        - node_modules/
   - name: AUPSUP_NODE
     type: nodejs
     path: AUPSUP_NODE
@@ -117,7 +125,9 @@ modules:
         properties:
           url: '${default-url}'
     build-parameters:
-      ignore: ["default-env.json", "node_modules/"]          
+      ignore:
+        - default-env.json
+        - node_modules/
     parameters:
       app-name: AUPSUP_NODE
       disk-quota: 500M
@@ -148,7 +158,9 @@ modules:
       builder: grunt
       supported-platforms: []
       build-result: dist
-      ignore: ["default-env.json", "node_modules/"]   
+      ignore:
+        - default-env.json
+        - node_modules/
   - name: AUPSUP_HTML5_NONCONFORMITA
     type: html5
     path: AUPSUP_HTML5_NONCONFORMITA
@@ -156,7 +168,9 @@ modules:
       builder: grunt
       supported-platforms: []
       build-result: dist
-      ignore: ["default-env.json", "node_modules/"]   
+      ignore:
+        - default-env.json
+        - node_modules/
   - name: AUPSUP_HTML5_INBOUNDDELIV
     type: html5
     path: AUPSUP_HTML5_INBOUNDDELIV
@@ -164,7 +178,9 @@ modules:
       builder: grunt
       supported-platforms: []
       build-result: dist
-      ignore: ["default-env.json", "node_modules/"]   
+      ignore:
+        - default-env.json
+        - node_modules/
   - name: AUPSUP_HTML5_SCHEDAGREE
     type: html5
     path: AUPSUP_HTML5_SCHEDAGREE
@@ -172,7 +188,9 @@ modules:
       builder: grunt
       supported-platforms: []
       build-result: dist
-      ignore: ["default-env.json", "node_modules/"]   
+      ignore:
+        - default-env.json
+        - node_modules/
   - name: AUPSUP_HTML5_APR_SCDAGR
     type: html5
     path: AUPSUP_HTML5_APR_SCDAGR
@@ -180,7 +198,9 @@ modules:
       builder: grunt
       supported-platforms: []
       build-result: dist
-      ignore: ["default-env.json", "node_modules/"]   
+      ignore:
+        - default-env.json
+        - node_modules/
   - name: AUPSUP_HTML5_METASUPPLIER_M
     type: html5
     path: AUPSUP_HTML5_METASUPPLIER_M
@@ -188,7 +208,9 @@ modules:
       builder: grunt
       supported-platforms: []
       build-result: dist
-      ignore: ["default-env.json", "node_modules/"]   
+      ignore:
+        - default-env.json
+        - node_modules/
   - name: AUPSUP_HTML5_METASUPPLIER_BM
     type: html5
     path: AUPSUP_HTML5_METASUPPLIER_BM
@@ -196,7 +218,9 @@ modules:
       builder: grunt
       supported-platforms: []
       build-result: dist
-      ignore: ["default-env.json", "node_modules/"]   
+      ignore:
+        - default-env.json
+        - node_modules/
   - name: AUPSUP_HTML5_PURCH_ORDS
     type: html5
     path: AUPSUP_HTML5_PURCH_ORDS
@@ -204,7 +228,9 @@ modules:
       builder: grunt
       supported-platforms: []
       build-result: dist
-      ignore: ["default-env.json", "node_modules/"]   
+      ignore:
+        - default-env.json
+        - node_modules/
   - name: AUPSUP_HTML5_CUSTOMIZING
     type: html5
     path: AUPSUP_HTML5_CUSTOMIZING
@@ -212,7 +238,9 @@ modules:
       builder: grunt
       supported-platforms: []
       build-result: dist
-      ignore: ["default-env.json", "node_modules/"]   
+      ignore:
+        - default-env.json
+        - node_modules/
   - name: AUPSUP_HTML5_LOGSORDSCHED
     type: html5
     path: AUPSUP_HTML5_LOGSORDSCHED
@@ -220,7 +248,16 @@ modules:
       builder: grunt
       supported-platforms: []
       build-result: dist
-      ignore: ["default-env.json", "node_modules/"]   
+      ignore:
+        - default-env.json
+        - node_modules/
+  - name: AUPSUP_HTML5_DOC_MANAG
+    type: html5
+    path: AUPSUP_HTML5_DOC_MANAG
+    build-parameters:
+      builder: grunt
+      supported-platforms: []
+      build-result: dist
 resources:
   - name: AUP_SUPPLIER_PORTAL_html5_repo_runtime
     parameters:
@@ -264,3 +301,8 @@ resources:
     properties:
       hdi-master-container: '${service-name}'
     type: com.sap.xs.hdi-container
+  - name: dest_AUP_SUPPLIER_PORTAL
+    parameters:
+      service-plan: lite
+      service: destination
+    type: org.cloudfoundry.managed-service
