--- a/mta.yaml
+++ b/mta.yaml
@@ -82,6 +82,10 @@ modules:
           artifacts:
             - './*'
           target-path: resources/AUPSUP_HTML5_DOC_MANAG
+        - name: AUPSUP_HTML5_CONTRACTS
+          artifacts:
+            - './*'
+          target-path: resources/AUPSUP_HTML5_CONTRACTS
   - name: AUPSUP_LAUNCHPAD
     type: com.sap.portal.content
     path: AUPSUP_LAUNCHPAD
@@ -254,6 +258,13 @@ modules:
   - name: AUPSUP_HTML5_DOC_MANAG
     type: html5
     path: AUPSUP_HTML5_DOC_MANAG
+    build-parameters:
+      builder: grunt
+      supported-platforms: []
+      build-result: dist
+  - name: AUPSUP_HTML5_CONTRACTS
+    type: html5
+    path: AUPSUP_HTML5_CONTRACTS
     build-parameters:
       builder: grunt
       supported-platforms: []
